2013-11-26  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-stbee.h: New.

	* rules.mk (OUTFILES) [ENABLE_OUTPUT_HEX]: Add hex generation.

2013-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_stm32f103.c, example-cdc/usb_lld.h: Update from
	Gnuk.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.03.
	* doc/chopstx.texi (VERSION): 0.03.

	* chopstx.c (preempt): Disable interrupt.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.02.
	* doc/chopstx.texi (VERSION): 0.02.

	* example-cdc/usb_stm32f103.c: Updated from NeuG.

	* chopstx.c (CPU_EXCEPTION_PRIORITY_SYSTICK): Equals to
	CPU_EXCEPTION_PRIORITY_INTERRUPT.

2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.01.
	* doc/chopstx.texi (VERSION): 0.01.

	* chopstx.c (chx_clr_intr): New.
	(chopstx_intr_wait): Call chopstx.c.
	(chx_enable_intr): Let chx_clr_intr clear pending-bit.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_lld.h, example-cdc/usb_stm32f103.c: Update from
	Gnuk.
	* example-cdc/usb-cdc.c (usb_cb_get_descriptor): Follow the
	change.

	* example-cdc/sys.c, example-led/sys.c: Update from Gnuk.

	* chopstx.c (CPU_EXCEPTION_PRIORITY_INTERRUPT)
	(CPU_EXCEPTION_PRIORITY_PENDSV): Change the value, so that
	interrupt priority matches USB interrupt priority of old SYS 1.0
	implementation.
	(chx_enable_intr, chx_disable_intr): Clear pending bit at
	chx_enable_intr.
	(chopstx_intr_wait): Call chx_enable_intr only when it's going to
	sleep.
	* entry.c (RCC_APB2RSTR_AFIORST, define RCC_APB2ENR_AFIOEN): New.
	(AFIO, GPIO_OTHER): New.
	(gpio_init): Handle AFIO and GPIO_OTHER.
	* board/board-fst-01.h, board/board-stm8s-discovery.h: Add pin-cir
	usage.

2013-08-21  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.00.

	* doc: Documentation.
	* example-led/sys.c: Update from NeuG.
	* example-cdc/sys.c: Likewise.
	* example-cdc/usb_stm32f103.c: Likewise.
	* example-cdc/usb_lld.h: Likewise.
	* example-cdc/usb-cdc.c: Likewise.

2013-08-19  Niibe Yutaka  <gniibe@fsij.org>